package edu.fiuba.algo3.modelo;

public class Senior extends Seniority{

    public Senior(){
        this.turnos = 0;
        this.recuperacionEnergia = 10;
        this.limiteAsencion = 0;
    }

    public void evolucionar(Gladiador gladiador){
    }

}